bienvenidos a este nuevo github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola</title>
 </head>
 <body>
-    Casi que no me da papi... pero ya
+    Bienvenidos a este nuevo github
 </body>
 </html>
